<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2f33"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="136dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/orion_nitro_generator"
        android:textAlignment="center"
        android:textColor="#5865F2"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tokenField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:fontFamily="serif"
        android:text="@string/created_for_free_use"
        android:textColor="#5865F2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_policy" />

    <EditText
        android:id="@+id/tokenField"
        android:layout_width="317dp"
        android:layout_height="79dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="197dp"
        android:background="@drawable/bg_fields"
        android:ems="10"
        android:hint="@string/your_account_token"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#8C8A8A"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/bg_buttons"
        android:text="@string/save_settings"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tokenField" />

    <Button
        android:id="@+id/btn_policy"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/bg_buttons"
        android:text="Usage policy"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />


</androidx.constraintlayout.widget.ConstraintLayout>